created publisher entity, added pagination and adjusted repeating author and book instances